--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -22,6 +22,44 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
+
+    server {
+        listen 80;
+        server_name take-out.momotarosushi.ca;
+        
+        location /.well-known/acme-challenge/ {
+             root /var/www/certbot;
+        }
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name take-out.momotarosushi.ca;
+
+        # NOTE: This certificate path is for the new domain
+        ssl_certificate /etc/letsencrypt/live/take-out.momotarosushi.ca/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/take-out.momotarosushi.ca/privkey.pem;
+        
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        location / {
+            # Proxy traffic to the 'takeout' service from docker-compose.yml
+            proxy_pass http://takeout:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+
     server {
         listen 80;
         server_name dine-in.momotarosushi.ca;
