--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.6.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@stripe/react-stripe-js": "^2.7.3", // Version may vary
+    "@stripe/stripe-js": "^4.1.0"       // Version may vary
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
