--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,116 +4,165 @@ x-common-build-args: &common-build-args
   VITE_API_KEY: ${VITE_API_KEY}
   VITE_SEND_ORDER_URL: ${VITE_SEND_ORDER_URL}
   VITE_SAVE_ORDER_URL: ${VITE_SAVE_ORDER_URL}
-
-x-base-service: &base-service
-  build:
-    context: .
-    dockerfile: Dockerfile
-  expose:
-    - "80"
-  networks:
-    - restaurant-network
+  VITE_API_GATEWAY_URL: ${VITE_API_GATEWAY_URL}
 
 services:
   # Table instances for Dine-in
   table-1:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-1
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
   
   table-2:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-2
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+  
   table-3:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-3
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-4:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-4
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-5:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-5
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-6:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-6
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-7:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-7
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-8:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-8
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-9:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-9
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-10:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-10
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
+
   table-11:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: dine-in
         VITE_TABLE_ID: table-11
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
 
   takeout:
-    <<: *base-service
     build:
+      context: .
+      dockerfile: Dockerfile
       args:
         <<: *common-build-args
         VITE_APP_MODE: takeout
         VITE_TABLE_ID: takeout
-        VITE_API_GATEWAY_URL: "https://097zxtivqd.execute-api.ca-central-1.amazonaws.com/PROD"
+    expose:
+      - "80"
+    networks:
+      - restaurant-network
 
   nginx-proxy:
     image: nginx:alpine
