--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -8,21 +8,23 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # Logging
+    resolver 127.0.0.11 valid=30s;
+    
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                    '$status $body_bytes_sent "$http_referer" '
-                   '"$http_user_agent" "$http_x_forwarded_for" "table: $http_x_table_id"';
+                   '"$http_user_agent" "$http_x_forwarded_for"';
     
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
     
-    # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-
+    # ==================================
+    # == TAKE-OUT DOMAIN CONFIGURATION ==
+    # ==================================
     server {
         listen 80;
         server_name take-out.momotarosushi.ca;
@@ -36,22 +38,18 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name take-out.momotarosushi.ca;
 
-        # NOTE: This certificate path is for the new domain
         ssl_certificate /etc/letsencrypt/live/take-out.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/take-out.momotarosushi.ca/privkey.pem;
         
-        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         location / {
-            # Proxy traffic to the 'takeout' service from docker-compose.yml
-            proxy_pass http://takeout:80/;
+            proxy_pass http://takeout:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -59,7 +57,9 @@ http {
         }
     }
 
-
+    # ================================
+    # == DINE-IN DOMAIN CONFIGURATION ==
+    # ================================
     server {
         listen 80;
         server_name dine-in.momotarosushi.ca;
@@ -73,178 +73,39 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name dine-in.momotarosushi.ca;
 
         ssl_certificate /etc/letsencrypt/live/dine-in.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dine-in.momotarosushi.ca/privkey.pem;
         
-        location ~ /.well-known/acme-challenge/{
-             root /var/www/certbot;
-        }
-        
-        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        
+        # This location block handles specific table routes first.
+        # The regex is updated to handle URLs with or without a trailing slash.
+        location ~ ^/table-([1-9]|10|11) {
+            set $table_service table-$1;
+            proxy_pass http://$table_service:80/;
 
-        # Table-specific routing
-        location /table-1/ {
-            proxy_pass http://table-1:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-1";
             
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
 
-        location /table-2/ {
-            proxy_pass http://table-2:80/;
+        # This "catch-all" block handles the landing page and any other requests.
+        location / {
+            proxy_pass http://table-1:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-2";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
         }
-
-        # ... (location blocks for table-3 through table-11 remain exactly the same) ...
-
-        location /table-3/ {
-            proxy_pass http://table-3:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-3";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-4/ {
-            proxy_pass http://table-4:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-4";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-5/ {
-            proxy_pass http://table-5:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-5";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-6/ {
-            proxy_pass http://table-6:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-6";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-7/ {
-            proxy_pass http://table-7:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-7";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-8/ {
-            proxy_pass http://table-8:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-8";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-9/ {
-            proxy_pass http://table-9:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-9";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-10/ {
-            proxy_pass http://table-10:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-10";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /table-11/ {
-            proxy_pass http://table-11:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Table-ID "table-11";
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "All tables healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # Default route - redirect to table 1
-        location = / {
-            return 301 /table-1/;
-        }
-    } # <--- THIS BRACE WAS MOVED HERE FROM ABOVE
+    }
 }
