--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@stripe/react-stripe-js": "^2.7.3", // Version may vary
-    "@stripe/stripe-js": "^4.1.0"       // Version may vary
+    "@stripe/react-stripe-js": "^4.0.1", 
+    "@stripe/stripe-js": "^7.9.0"       
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
