--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -7,7 +7,6 @@ http {
     default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 65;
-
     resolver 127.0.0.11 valid=30s;
     
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
@@ -21,26 +20,20 @@ http {
     gzip_vary on;
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
-
+}
     # ==================================
     # == TAKE-OUT DOMAIN CONFIGURATION ==
     # ==================================
     server {
         listen 80;
         server_name take-out.momotarosushi.ca;
-        
-        location /.well-known/acme-challenge/ {
-             root /var/www/certbot;
-        }
-        location / {
-            return 301 https://$host$request_uri;
-        }
+        location /.well-known/acme-challenge/ { root /var/www/certbot; }
+        location / { return 301 https://$host$request_uri; }
     }
-
+        }}
     server {
         listen 443 ssl http2;
         server_name take-out.momotarosushi.ca;
-
         ssl_certificate /etc/letsencrypt/live/take-out.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/take-out.momotarosushi.ca/privkey.pem;
         
@@ -57,25 +50,19 @@ http {
         }
     }
 
-    # ================================
-    # == DINE-IN DOMAIN CONFIGURATION ==
-    # ================================
+    # ========================================
+    # == DINE-IN DOMAIN (Corrected Routing) ==
+    # ========================================
     server {
         listen 80;
         server_name dine-in.momotarosushi.ca;
-        
-        location /.well-known/acme-challenge/ {
-             root /var/www/certbot;
-        }
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
+        location /.well-known/acme-challenge/ { root /var/www/certbot; }
+        location / { return 301 https://$host$request_uri; }
+    }}
 
     server {
         listen 443 ssl http2;
         server_name dine-in.momotarosushi.ca;
-
         ssl_certificate /etc/letsencrypt/live/dine-in.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dine-in.momotarosushi.ca/privkey.pem;
         
@@ -83,29 +70,89 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-        # This location block handles specific table routes first.
-        # The regex is updated to handle URLs with or without a trailing slash.
-        location ~ ^/table-([1-9]|10|11) {
-            set $table_service table-$1;
-            proxy_pass http://$table_service:80/;
-
+        # --- Using your previous, explicit routing logic ---
+        location /table-1/ {
+            proxy_pass http://table-1:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
         }
-
-        # This "catch-all" block handles the landing page and any other requests.
-        location / {
-            proxy_pass http://table-1:80;
+        location /table-2/ {
+            proxy_pass http://table-2:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-3/ {
+            proxy_pass http://table-3:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-4/ {
+            proxy_pass http://table-4:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-5/ {
+            proxy_pass http://table-5:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-6/ {
+            proxy_pass http://table-6:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-7/ {
+            proxy_pass http://table-7:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-8/ {
+            proxy_pass http://table-8:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-9/ {
+            proxy_pass http://table-9:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-10/ {
+            proxy_pass http://table-10:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        location /table-11/ {
+            proxy_pass http://table-11:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        # The default route for the main domain now correctly redirects to table-1
+        location = / {
+            return 301 https://$host/table-1/;
         }
     }
 }
+
