changed lambda function (consolidated)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@
 x-common-build-args: &common-build-args
   VITE_API_URL_MENU: ${VITE_API_URL_MENU}
   VITE_API_KEY: ${VITE_API_KEY}
-  VITE_SEND_ORDER_URL: ${VITE_SEND_ORDER_URL}
-  VITE_SAVE_ORDER_URL: ${VITE_SAVE_ORDER_URL}
+  VITE_TABLE_TAP_URL: ${VITE_TABLE_TAP_URL}
   VITE_API_GATEWAY_URL: ${VITE_API_GATEWAY_URL}
 
 services:
