change ci/cd to work on feature

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -6,7 +6,7 @@ name: Deploy TableTap-OrderProcessing Lambda
 on:
   push:
     branches:
-      - main
+      - feature/take-stripe-integration
 
 jobs:
   deploy:
