--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -55,3 +55,4 @@ jobs:
         with:
           function-name: TableTap-OrderProcessing
           code-artifacts-dir: ./dist
+          runtime: python3.13
