--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -41,6 +41,12 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
+        location /chatbot-assets/ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            try_files $uri $uri/ =444; # Use 444 to avoid logging 404s for static assets
+        }
+        
+        
         location / {
             proxy_pass http://takeout:80;
             proxy_set_header Host $host;
@@ -70,6 +76,12 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
+         location /chatbot-assets/ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            try_files $uri $uri/ =444; # Use 444 to avoid logging 404s for static assets
+        }
+
+
         # --- Using your previous, explicit routing logic ---
         location /table-1/ {
             proxy_pass http://table-1:80/;
