called the wrong api

--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -41,11 +41,46 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
+        # Chatbot CSS files - MUST come before general chatbot-assets location
+        location ~ ^/chatbot-assets/.*\.css$ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            default_type text/css;
+            add_header Content-Type "text/css" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Cache-Control "public, must-revalidate" always;
+            expires 1h;
+        }
+
+        # Chatbot JS files
+        location ~ ^/chatbot-assets/.*\.js$ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            default_type application/javascript;
+            add_header Content-Type "application/javascript" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Cache-Control "public, must-revalidate" always;
+            expires 1h;
+        }
+
+        # Chatbot HTML files
+        location ~ ^/chatbot-assets/.*\.html$ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            default_type text/html;
+            add_header Content-Type "text/html; charset=utf-8" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header X-Frame-Options "" always;
+            expires 1h;
+        }
+
+        # General chatbot assets (for any other files)
         location /chatbot-assets/ {
             alias /usr/share/nginx/html/chatbot-assets/;
-            try_files $uri $uri/ =444; # Use 444 to avoid logging 404s for static assets
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            try_files $uri $uri/ =404;
         }
-        
         
         location / {
             proxy_pass http://takeout:80;
@@ -76,13 +111,48 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-         location /chatbot-assets/ {
+        # Chatbot CSS files - MUST come before general chatbot-assets location
+        location ~ ^/chatbot-assets/.*\.css$ {
             alias /usr/share/nginx/html/chatbot-assets/;
-            try_files $uri $uri/ =444; # Use 444 to avoid logging 404s for static assets
+            default_type text/css;
+            add_header Content-Type "text/css" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Cache-Control "public, must-revalidate" always;
+            expires 1h;
         }
 
+        # Chatbot JS files
+        location ~ ^/chatbot-assets/.*\.js$ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            default_type application/javascript;
+            add_header Content-Type "application/javascript" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Cache-Control "public, must-revalidate" always;
+            expires 1h;
+        }
 
-        # --- Using your previous, explicit routing logic ---
+        # Chatbot HTML files
+        location ~ ^/chatbot-assets/.*\.html$ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            default_type text/html;
+            add_header Content-Type "text/html; charset=utf-8" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header X-Frame-Options "" always;
+            expires 1h;
+        }
+
+        # General chatbot assets (for any other files)
+        location /chatbot-assets/ {
+            alias /usr/share/nginx/html/chatbot-assets/;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            try_files $uri $uri/ =404;
+        }
+
+        # --- Table routing ---
         location /table-1/ {
             proxy_pass http://table-1:80/;
             proxy_set_header Host $host;
