cleaned conf file

--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -43,7 +43,8 @@ http {
 
         # Chatbot CSS files - MUST come before general chatbot-assets location
         location ~ ^/chatbot-assets/.*\.css$ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+            # root is inherited
+            try_files $uri =404; # Check for the file directly
             default_type text/css;
             add_header Content-Type "text/css" always;
             add_header Access-Control-Allow-Origin "*" always;
@@ -54,7 +55,8 @@ http {
 
         # Chatbot JS files
         location ~ ^/chatbot-assets/.*\.js$ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+            # root is inherited
+            try_files $uri =404;
             default_type application/javascript;
             add_header Content-Type "application/javascript" always;
             add_header Access-Control-Allow-Origin "*" always;
@@ -65,7 +67,8 @@ http {
 
         # Chatbot HTML files
         location ~ ^/chatbot-assets/.*\.html$ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+            # root is inherited
+            try_files $uri =404;
             default_type text/html;
             add_header Content-Type "text/html; charset=utf-8" always;
             add_header Access-Control-Allow-Origin "*" always;
@@ -75,8 +78,9 @@ http {
         }
 
         # General chatbot assets (for any other files)
-        location /chatbot-assets/ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+       location /chatbot-assets/ {
+            # root is inherited
+            try_files $uri =404; # DO NOT check for $uri/
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
             try_files $uri $uri/ =404;
