added json file for lex

--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -37,53 +37,58 @@ http {
         ssl_certificate /etc/letsencrypt/live/take-out.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/take-out.momotarosushi.ca/privkey.pem;
         
+        # Set the root for all static files
+        root /usr/share/nginx/html;
+
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # Chatbot CSS files - MUST come before general chatbot-assets location
+        # Rewrite rules for lex-web-ui loader files
+        location = /lex-web-ui-loader.css {
+            rewrite ^ /chatbot-assets/lex-web-ui-loader.css last;
+        }
+
+        location = /lex-web-ui-loader-config.json {
+            rewrite ^ /chatbot-assets/lex-web-ui-loader-config.json last;
+        }
+
+        location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
+            rewrite ^/(.+)$ /chatbot-assets/$1 last;
+        }
+
+        # Chatbot CSS files
         location ~ ^/chatbot-assets/.*\.css$ {
-            # root is inherited
-            try_files $uri =404; # Check for the file directly
-            default_type text/css;
+            try_files $uri =404;
             add_header Content-Type "text/css" always;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, must-revalidate" always;
-            expires 1h;
+            add_header Cache-Control "public, max-age=3600" always;
         }
 
         # Chatbot JS files
         location ~ ^/chatbot-assets/.*\.js$ {
-            # root is inherited
             try_files $uri =404;
-            default_type application/javascript;
             add_header Content-Type "application/javascript" always;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, must-revalidate" always;
-            expires 1h;
+            add_header Cache-Control "public, max-age=3600" always;
         }
 
         # Chatbot HTML files
         location ~ ^/chatbot-assets/.*\.html$ {
-            # root is inherited
             try_files $uri =404;
-            default_type text/html;
             add_header Content-Type "text/html; charset=utf-8" always;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
             add_header X-Frame-Options "" always;
-            expires 1h;
         }
 
-        # General chatbot assets (for any other files)
-       location /chatbot-assets/ {
-            # root is inherited
-            try_files $uri =404; # DO NOT check for $uri/
+        # General chatbot assets (for any other files like images, fonts)
+        location /chatbot-assets/ {
+            try_files $uri =404;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            try_files $uri $uri/ =404;
         }
         
         location / {
@@ -111,49 +116,58 @@ http {
         ssl_certificate /etc/letsencrypt/live/dine-in.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dine-in.momotarosushi.ca/privkey.pem;
         
+        # Set the root for all static files
+        root /usr/share/nginx/html;
+
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         
-        # Chatbot CSS files - MUST come before general chatbot-assets location
+        # Rewrite rules for lex-web-ui loader files
+        location = /lex-web-ui-loader.css {
+            rewrite ^ /chatbot-assets/lex-web-ui-loader.css last;
+        }
+
+        location = /lex-web-ui-loader-config.json {
+            rewrite ^ /chatbot-assets/lex-web-ui-loader-config.json last;
+        }
+
+        location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
+            rewrite ^/(.+)$ /chatbot-assets/$1 last;
+        }
+
+        # Chatbot CSS files
         location ~ ^/chatbot-assets/.*\.css$ {
-            alias /usr/share/nginx/html/chatbot-assets/;
-            default_type text/css;
+            try_files $uri =404;
             add_header Content-Type "text/css" always;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, must-revalidate" always;
-            expires 1h;
+            add_header Cache-Control "public, max-age=3600" always;
         }
 
         # Chatbot JS files
         location ~ ^/chatbot-assets/.*\.js$ {
-            alias /usr/share/nginx/html/chatbot-assets/;
-            default_type application/javascript;
+            try_files $uri =404;
             add_header Content-Type "application/javascript" always;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            add_header Cache-Control "public, must-revalidate" always;
-            expires 1h;
+            add_header Cache-Control "public, max-age=3600" always;
         }
 
         # Chatbot HTML files
         location ~ ^/chatbot-assets/.*\.html$ {
-            alias /usr/share/nginx/html/chatbot-assets/;
-            default_type text/html;
+            try_files $uri =404;
             add_header Content-Type "text/html; charset=utf-8" always;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
             add_header X-Frame-Options "" always;
-            expires 1h;
         }
 
         # General chatbot assets (for any other files)
         location /chatbot-assets/ {
-            alias /usr/share/nginx/html/chatbot-assets/;
+            try_files $uri =404;
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-            try_files $uri $uri/ =404;
         }
 
         # --- Table routing ---
