--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -84,6 +84,14 @@ http {
             add_header X-Frame-Options "" always;
         }
 
+        # Chatbot JSON files
+        location ~ ^/chatbot-assets/.*\.json$ {
+            try_files $uri =404;
+            add_header Content-Type "application/json" always;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+        }
+
         # General chatbot assets (for any other files like images, fonts)
         location /chatbot-assets/ {
             try_files $uri =404;
