--- a/nginx-load-balancer.conf
+++ b/nginx-load-balancer.conf
@@ -32,7 +32,8 @@ http {
     }
     
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name take-out.momotarosushi.ca;
         ssl_certificate /etc/letsencrypt/live/take-out.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/take-out.momotarosushi.ca/privkey.pem;
@@ -51,6 +52,17 @@ http {
 
         location = /lex-web-ui-loader-config.json {
             rewrite ^ /chatbot-assets/lex-web-ui-loader-config.json last;
+        }
+        
+        # Catches the bad request for material_icons.css from the chatbot's internal loader
+        location = /material_icons.css {
+            rewrite ^ /chatbot-assets/material_icons.css last;
+        }
+
+        # Catches other known chatbot dependencies requested from root
+        # Updated regex to catch .min.js and .min.css files
+        location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js)$ {
+            rewrite ^/(.+)$ /chatbot-assets/$1 last;
         }
 
         location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
@@ -111,7 +123,8 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name dine-in.momotarosushi.ca;
         ssl_certificate /etc/letsencrypt/live/dine-in.momotarosushi.ca/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dine-in.momotarosushi.ca/privkey.pem;
@@ -131,7 +144,18 @@ http {
         location = /lex-web-ui-loader-config.json {
             rewrite ^ /chatbot-assets/lex-web-ui-loader-config.json last;
         }
+        
+        # Catches the bad request for material_icons.css from the chatbot's internal loader
+        location = /material_icons.css {
+            rewrite ^ /chatbot-assets/material_icons.css last;
+        }
 
+        # Catches other known chatbot dependencies requested from root
+        # Updated regex to catch .min.js and .min.css files
+        location ~ ^/(3\..+\.(js|css)|4\..+\.js|aws-sdk.+\.js|lex-web-ui.*\.(js|css)|wav-worker.+\.js)$ {
+            rewrite ^/(.+)$ /chatbot-assets/$1 last;
+        }
+        
         location ~ ^/(lex-web-ui-.+\.(js|css|map))$ {
             rewrite ^/(.+)$ /chatbot-assets/$1 last;
         }
@@ -255,3 +279,4 @@ http {
         }
     }
 }
+
