--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -5,7 +5,7 @@ name: Build and Push Docker Images
 on:
   push:
     branches:
-      - main
+      - feature/take-stripe-integration
   workflow_dispatch:
 
 jobs:
